--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ nav{
     align-self: flex-start;
 }
 .right-sidebar{
-    background: #cbdffa;
     flex-basis: 25%;
     position: sticky;
     top: 70px;
@@ -117,4 +116,20 @@ nav{
     margin: 25px 0;
     color: #626262;
     font-weight: 500;
+}
+
+.sidebar-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+.sidebar-title h4{
+    font-weight: 600;
+    font-size: 16px;
+}
+.sidebar-title a{
+    text-decoration: none;
+    color: #1876f2;
+    font-size: 12px;
 }
