--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ nav{
     position: sticky;
     top: 70px;
     align-self: flex-start;
+    background: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    color: #626262;
 }
 .main-content{
     flex-basis: 47%;
